# scientific-stochastic-interpolants

./: .gitignore  .pre-commit-config.yaml  CODE_AND_EXPERIMENTS_OVERVIEW.md  LICENSE  NEXT_SESSION_PROMPT.md  PROJECT_HANDOFF.md  README.md  pyproject.toml  scientific-stochastic-interpolants.code-workspace
archive/old_manuscript/: Makefile  PAPER_SPEC.md  animate.sty  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex
archive/old_manuscript/sections/: appendix_extra.tex  appendix_methods.tex  appendix_proof_conditioning.tex  appendix_simple_test_case.tex  comparison.tex  preliminaries.tex  related_work.tex  results.tex
archive/old_manuscript/sections_old/: appendix_methods.tex  appendix_proof_posterior.tex  comparison.tex  conclusion.tex  implementation.tex  introduction.tex  methodology.tex  results.tex
archive/old_manuscript/style/: packages.tex
config/: aurora.yaml  deterministic_navier_stokes.yaml  diffusion_knmi_pde_transformer.yaml  diffusion_stochastic_navier_stokes.yaml  diffusion_stochastic_navier_stokes_pde_transformer.yaml  diffusion_stochastic_navier_stokes_posterior.yaml  flow_matching_knmi_pde_transformer.yaml  flow_matching_stochastic_navier_stokes.yaml  flow_matching_stochastic_navier_stokes_pde_transformer.yaml  flow_matching_stochastic_navier_stokes_posterior.yaml  flow_matching_udales.yaml  ito_map_distill_navier_stokes.yaml  ito_map_flow_matching_navier_stokes.yaml  ito_map_from_deterministic_residual_fm_navier_stokes.yaml  ito_map_from_deterministic_residual_navier_stokes.yaml  ito_map_from_deterministic_warmstart_navier_stokes.yaml  ito_map_stochastic_navier_stokes.yaml  knmi.yaml  knmi_pde_transformer.yaml  knmi_pde_transformer_flow_matching.yaml  stochastic_navier_stokes.yaml  stochastic_navier_stokes_pde_transformer.yaml  stochastic_navier_stokes_posterior.yaml  udales.yaml  udales_flow_matching_posterior.yaml  udales_pde_transformer.yaml  udales_posterior.yaml  weather.yaml  weather_pde_transformer.yaml  weather_posterior.yaml  xie_and_castro.yaml
docs/: manuscript_review_2026-07-06.md
docs/plans/: deterministic_models_and_trainer_refactor.md  deterministic_to_ito_map_finetuning.md  ito-maps-implementation-plan.md
external_libs/aurora_lib/: pyproject.toml
external_libs/aurora_lib/src/aurora_lib/: batch_adapter.py  load_data.py  model_wrapper.py
external_libs/jax_cfd_lib/: main.py  pyproject.toml
external_libs/jax_cfd_lib/tests/: test_correlation_localization.py
external_libs/torch_cfd/: boundary_conditions.py  flow_past_obstacle.py  flow_past_obstacle_da.py  flow_past_obstacle_ensemble.py  forward_model.py
external_libs/torch_cfd_lib/: pyproject.toml
external_libs/torch_cfd_lib/src/torch_cfd_lib/: ENKF.py  flow_past_obstacle.py  flow_past_obstacle_da.py  flow_past_obstacle_ensemble.py  forward_model.py  main.py  utils.py
manuscript/: gensymb.sty  library_NTM.bib  listingsutf8.sty  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex
manuscript/sections/: appendix_extra.tex  appendix_methods.tex  appendix_proof_conditioning.tex  appendix_proof_interpolant_likelihood_covariance.tex  appendix_proof_posterior.tex  appendix_score_velocity_duality.tex  comparison.tex  conclusion.tex  implementation.tex  introduction.tex  methodology.tex  preliminaries.tex  related_work.tex  results.tex
manuscript/sections_old/: appendix_correction_factor_new.tex  appendix_extra.tex  appendix_score_velocity_duality.tex  preliminaries.tex
manuscript/style/: macros.tex
paper/configs/: benchmark.yaml  flowdas_sns_posterior.yaml  flowdas_udales_posterior.yaml  fm_sns_posterior.yaml  fm_udales_posterior.yaml  si_sns_posterior.yaml  si_udales_posterior.yaml
paper/configs/case/: stochastic_navier_stokes.yaml  udales.yaml
paper/configs/method/: flowdas.yaml  fm.yaml  si.yaml
paper/scripts/: _test_hybrid.py  evaluate_posterior_samples.py  generate_posterior_samples.py  main_analytical.py  sweep_correction_multiplier.py
paper/scripts/analytical_utils/: SDE_conditional_likelihood.md  kl_divergence.py  likelihood.py  posterior_model.py  (+2 more)
paper_experiments/: .gitignore  DESIGN_NOTES.md  HANDOFF_GPU.md  IMPROVEMENT_IDEAS.md  README.md  RUN_STATUS.md  aggregate_analytical.py  aggregate_dflow_sweep.py  aggregate_grid.py  aggregate_multitraj.py  aggregate_ns.py  aggregate_urban.py  analyze_groundtruth_posterior.py  figure_common.py  make_analytical_figures.py  make_conventional_figures.py  make_method_figures.py  make_ns_figures.py  make_ns_presentation_figures.py  make_ns_stepbench_figure.py  make_state_animations.py  make_tables.py  make_urban_figures.py  merge_and_tables.sh  results_schema.py  run.py  run_analytical_grid.sh  run_gpu_ns.sh  run_multitraj.sh  run_multitraj_steps.sh  run_ns_classical.sh  run_ns_dflow_sweep.sh  run_ns_dflow_sweep2.sh  run_ns_grid.sh  run_ns_grid_M25.sh  run_ns_grid_M25_nodflow.sh  run_ns_grid_M25_nodflow_parallel.sh  run_ns_grid_M25_parallel.sh  run_ns_headline.sh  run_ns_reference.sh  (+5 more)
paper_experiments/cases/: __init__.py
paper_experiments/common/: __init__.py  aggregate_lib.py  aggregation.py  latex_tables.py  per_step_io.py  runner.py  seeding.py
paper_experiments/configs/: benchmark.yaml
paper_new/: EXPERIMENTS_IMPLEMENTATION_SPEC.md  GAP_ANALYSIS.md  bib.out  library_NTM.bib  main.aux  main.bbl  main.blg  main.out  main.tex
paper_new/sections/: conclusion.tex  implementation.tex  introduction.tex  methodology.tex  preliminaries.tex  related_work.tex  results.tex
paper_new/style/: macros.tex  packages.tex
paper_scripts/: compare_results.py  main_analytical.py
paper_scripts/analytical_utils/: cheap_interpolant_corrections.md  kde_utils.py  likelihood.py  posterior_model.py  why_interpolant_likelihood_fails_in_LG.md
pixi_archive/: pyproject_pixi.toml
scratchpad/: step1.py  step4.py  surge_smoke.py
src/scisinterpolant/: __init__.py
tests/: ito_map_test_helpers.py  test_brownian.py  test_deterministic_model.py  test_ito_map_finetuning.py  test_ito_map_model.py  test_ito_map_trainer.py  test_metrics.py  test_trainer_refactor.py  test_trainers.py
(+154 files in other folders)
