[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scientific-stochastic-interpolants"
version = "0.1.0"
description = "Scientific Stochastic Interpolants"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nikolaj T. Mücke", email = "nmucke@gmail.com"},
]
classifiers = [
]
requires-python = ">=3.11"
dependencies = [
]

[project.scripts]

[project.urls]

[tool.hatch.build.targets.wheel]
packages = ["src/scientific_stochastic_interpolants"]

# Pixi project configuration
[tool.pixi.project]
name = "scientific-stochastic-interpolants"
version = "0.1.0"
description = "Scientific Stochastic Interpolants"
authors = ["Nikolaj T. Mücke <nmucke@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nmucke/scientific-stochastic-interpolants"
repository = "https://github.com/nmucke/scientific-stochastic-interpolants.git"
channels = ["https://prefix.dev/conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

# System requirements
[tool.pixi.system-requirements]
cuda = "12.6"

# Pixi dependencies
[tool.pixi.dependencies]
python = ">=3.11"

[tool.pixi.pypi-dependencies]
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cu124" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cu124" }

[tool.pixi.target.osx.pypi-dependencies]
# OSX has no CUDA support so use the CPU here
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cpu" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cpu" }

# Pixi tasks
[tool.pixi.tasks]

# Development tasks
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["scientific_stochastic_interpolants"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
