[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project]
name = "scientific-stochastic-interpolants"
version = "0.1.1"
authors = [{ name = "Nikolaj T. Mücke", email = "nmucke@gmail.com" }]
requires-python = ">=3.13, <3.14"
dependencies = [
    "pydantic>=2.12.0",
    "pillow<12.0.0",
    "huggingface-hub<1.0.0",
    "numpy>=2.2.0",
    "h5py>=3.14.0,<4",
    "pdbpp>=0.11.6,<0.12",
    "tqdm",
    "matplotlib>=3.10.5,<4",
    "torch",
    "torchvision",
    "xarray>=2025.10.1,<2026",
    "ffmpeg",
    "hydra-core>=1.3.2,<2",
    "trackio",
    "pdetransformer>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<8.4.0",
    "pre-commit>=4.1.0,<4.2.0",
    "black>=24.1.0,<24.2.0",
    "isort>=6.0.0,<6.1.0",
    "mypy>=1.15.0,<1.16.0",
]

dev-cpu = [
    "pytest>=8.3.5,<8.4.0",
    "pre-commit>=4.1.0,<4.2.0",
    "black>=24.1.0,<24.2.0",
    "isort>=6.0.0,<6.1.0",
    "mypy>=1.15.0,<1.16.0",
]

dev-gpu = [
    "pytest>=8.3.5,<8.4.0",
    "pre-commit>=4.1.0,<4.2.0",
    "black>=24.1.0,<24.2.0",
    "isort>=6.0.0,<6.1.0",
    "mypy>=1.15.0,<1.16.0",
]

[tool.uv]
conflicts = [
    [
        { group = "dev-cpu" },
        { group = "dev-gpu" },
    ],
]

[tool.uv.workspace]
members = [
    "external_libs/torch_cfd_lib",
    "external_libs/jax_cfd_lib",
    "external_libs/aurora",
]

[tool.uv.build-backend]
module-name = "scisi"

[tool.uv.pip]
find-links = [
    "https://download.pytorch.org/whl/cu126",
    "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = "\\.pyi?$"
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["scientific_stochastic_interpolants"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "scisi.metrics.LSIM.*"
ignore_errors = true
