[project]
name = "aurora_lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = []

[tool.uv.sources]
scientific-stochastic-interpolants = { workspace = true }

[tool.uv.build-backend]
module-name = "aurora_lib"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"