[project]
name = "torch-cfd-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "torch-cfd>=0.2.6",
    "scientific-stochastic-interpolants",
]

[tool.uv.sources]
scientific-stochastic-interpolants = { workspace = true }

[tool.uv.build-backend]
module-name = "torch_cfd_lib"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
